--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   intl: ^0.18.0
   flex_color_scheme: ^4.1.1
+  nholiday_jp: ^1.0.2
 
 
 dev_dependencies:
