--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,13 @@ flutter_icons:
   android: "launcher_icon"
   ios: true
   image_path: "assets/icon/icon.png"
+  adaptive_icon_background: '#ffffff'
+  adaptive_icon_foreground: "assets/icon/icon_adaptive_foreground.png"
+  web:
+    generate: true
+    image_path: "assets/icon/icon.png"
+    background_color: "#ffffff"
+    theme_color: "#8E1728"
 
 # The following section is specific to Flutter packages.
 flutter:
