--- a/web/manifest.json
+++ b/web/manifest.json
@@ -3,8 +3,8 @@
     "short_name": "TokoBus",
     "start_url": ".",
     "display": "standalone",
-    "background_color": "#0175C2",
-    "theme_color": "#0175C2",
+    "background_color": "#ffffff",
+    "theme_color": "#8E1728",
     "description": "早稲田大学所沢キャンパスのスクールバス時刻表アプリです。",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
