--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   intl: ^0.18.0
   flex_color_scheme: ^6.1.2
   nholiday_jp: ^1.0.2
+  page_view_indicators: ^2.0.0
 
 
 dev_dependencies:
