--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.7.12'
+#         flutter-version: '3.7.12'
           channel: 'stable'
           cache: true
       - run: flutter --version
