--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,9 +35,9 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-  intl: ^0.18.0
-  flex_color_scheme: ^6.1.2
+  cupertino_icons: ^1.0.5
+  intl: ^0.18.1
+  flex_color_scheme: ^7.1.2
   nholiday_jp: ^1.0.2
   page_view_indicators: ^2.0.0
 
@@ -51,8 +51,8 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
-  flutter_launcher_icons: "^0.11.0"
+  flutter_lints: ^2.0.2
+  flutter_launcher_icons: ^0.11.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
