--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flex_color_scheme: ^7.1.2
   nholiday_jp: ^1.0.2
   page_view_indicators: ^2.0.0
+  url_launcher: ^6.1.12
 
 
 dev_dependencies:
