--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.5
   intl: ^0.18.1
-  flex_color_scheme: ^7.2.0
+  flex_color_scheme: ^7.3.1
   nholiday_jp: ^1.0.2
   page_view_indicators: ^2.0.0
   url_launcher: ^6.1.12
@@ -80,8 +80,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/icon/icon_transparent.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
