--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   nholiday_jp: ^1.0.2
   page_view_indicators: ^2.0.0
   url_launcher: ^6.1.14
+  http: ^1.1.0
 
 
 dev_dependencies:
@@ -52,7 +53,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.3
+  flutter_lints: ^3.0.0
   flutter_launcher_icons: ^0.11.0
 
 # For information on the generic Dart part of this file, see the
