--- a/.github/workflows/build_appbundle.yml
+++ b/.github/workflows/build_appbundle.yml
@@ -34,6 +34,11 @@ jobs:
       - name: Download Flutter packages
         run: flutter pub get
 
+      - name: Check version
+        run: |
+          flutter pub global activate cider
+          cider version
+
       # Secrets からrelease.jks を生成
       - name: Create release.jks
         run: echo -n ${{ secrets.ANDROID_KEY_JKS_BASE64 }} | base64 -d > android/app/release.jks # -n で改行を消している
