--- a/.github/workflows/build_ios.yml
+++ b/.github/workflows/build_ios.yml
@@ -47,6 +47,11 @@ jobs:
       - name: Run flutter pub get
         run: flutter pub get
 
+      - name: Check version
+        run: |
+          flutter pub global activate cider
+          cider version
+
       - name: Run flutter build
         id: build
         run: flutter build ios --release --no-codesign
