--- a/.github/workflows/build_appbundle.yml
+++ b/.github/workflows/build_appbundle.yml
@@ -31,6 +31,8 @@ jobs:
 
       - name: Wait for push to complete
         run: |
+          echo "Input: ${{ inputs.COMMIT_ID }}"
+          echo "Clone: $(git show --format='%H' --no-patch)"
           while [ ${{ inputs.COMMIT_ID }} -ne $(git show --format='%H' --no-patch) ]; do
             sleep 1
             git pull
