--- a/.github/workflows/build_ios.yml
+++ b/.github/workflows/build_ios.yml
@@ -31,7 +31,9 @@ jobs:
         run: |
           echo "Input: ${{ inputs.COMMIT_ID }}"
           echo "Clone: $(git show --format='%H' --no-patch)"
-          while [ ${{ inputs.COMMIT_ID }} -ne $(git show --format='%H' --no-patch) ]; do
+          while [ ${{ inputs.COMMIT_ID }} != $(git show --format='%H' --no-patch) ]; do
+            echo "Input: ${{ inputs.COMMIT_ID }}"
+            echo "Clone: $(git show --format='%H' --no-patch)"
             sleep 1
             git pull
           done
