--- a/.github/workflows/build_web.yml
+++ b/.github/workflows/build_web.yml
@@ -4,6 +4,11 @@ on:
   push:
     branches: [ main ]
   workflow_dispatch:
+  workflow_call:
+    inputs:
+      COMMIT_ID:
+        required: true
+        type: string
 
 jobs:
   build:
@@ -13,6 +18,18 @@ jobs:
         uses: actions/checkout@v4
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Wait for push to complete
+        if: github.event_name == 'workflow_call'
+        run: |
+          echo "Input: ${{ inputs.COMMIT_ID }}"
+          echo "Clone: $(git show --format='%H' --no-patch)"
+          while [ ${{ inputs.COMMIT_ID }} != $(git show --format='%H' --no-patch) ]; do
+            sleep 1
+            git pull
+            echo "Input: ${{ inputs.COMMIT_ID }}"
+            echo "Clone: $(git show --format='%H' --no-patch)"
+          done
 
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
@@ -31,3 +48,5 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./build/web
+          user_name: 'github-actions[bot]'
+          user_email: 'github-actions[bot]@users.noreply.github.com'
