ブランチ名を変更

--- a/.github/workflows/build_web.yml
+++ b/.github/workflows/build_web.yml
@@ -2,7 +2,7 @@ name: Build Web
 
 on:
   push:
-    branches: [ main ]
+    branches: [ master ]
   workflow_dispatch:
   workflow_call:
     inputs:
