--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,16 +25,16 @@ dev_dependencies:
 # flutter_launcher_icons: ^0.11.0
 
 flutter_icons:
-  android: "launcher_icon"
+  android: 'launcher_icon'
   ios: true
-  image_path: "assets/icon/icon.png"
+  image_path: 'assets/icon/icon.png'
   adaptive_icon_background: '#ffffff'
-  adaptive_icon_foreground: "assets/icon/icon_adaptive_foreground.png"
+  adaptive_icon_foreground: 'assets/icon/icon_adaptive_foreground.png'
   web:
     generate: true
-    image_path: "assets/icon/icon.png"
-    background_color: "#ffffff"
-    theme_color: "#8E1728"
+    image_path: 'assets/icon/icon.png'
+    background_color: '#ffffff'
+    theme_color: '#8E1728'
 
 flutter:
   uses-material-design: true
