--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,9 @@ dependencies:
   page_view_indicators: ^2.0.0
   url_launcher: ^6.3.0
   http: ^1.2.1
+  shared_preferences: ^2.2.3
+  settings_ui: ^2.0.2
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
