--- a/.github/workflows/build_appbundle.yml
+++ b/.github/workflows/build_appbundle.yml
@@ -46,6 +46,9 @@ jobs:
           channel: "stable"
           cache: true
 
+      - name: Run Flutter doctor
+        run: flutter doctor
+
       - name: Download Flutter packages
         run: flutter pub get
 
