--- a/.github/workflows/build_web.yml
+++ b/.github/workflows/build_web.yml
@@ -37,8 +37,8 @@ jobs:
           channel: 'stable'
           cache: true
 
-      - name: Run Flutter doctor
-        run: flutter doctor
+      - name: Run flutter doctor
+        run: flutter doctor -v
 
       - name: Build
         run: |
