--- a/.github/workflows/build_ios.yml
+++ b/.github/workflows/build_ios.yml
@@ -59,8 +59,8 @@ jobs:
           channel: "stable"
           cache: true
 
-      - name: Run Flutter doctor
-        run: flutter doctor
+      - name: Run flutter doctor
+        run: flutter doctor -v
 
       - name: Run flutter pub get
         run: flutter pub get
