--- a/.github/workflows/build_ios.yml
+++ b/.github/workflows/build_ios.yml
@@ -22,7 +22,7 @@ permissions:
 
 jobs:
   build_ios:
-    runs-on: macos-14
+    runs-on: macos-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
