--- a/.github/workflows/build_all.yml
+++ b/.github/workflows/build_all.yml
@@ -92,7 +92,12 @@ jobs:
         run: |
           gh release create v$VERSION_NAME --generate-notes
 
-      - name: Check commit ID
+      - name: Get commit logs and add to the release note
+        run: |
+          COMMIT_LOGS=$(git log v$PREV_VERSION_NAME..HEAD --pretty=format:"* %s")
+          gh release edit v$VERSION_NAME --add-body '### Commit Logs\n$COMMIT_LOGS'
+
+      - name: Check and save commit ID
         id: commit_id
         run: |
           git show --format='%H' --no-patch
