--- a/.github/workflows/build_all.yml
+++ b/.github/workflows/build_all.yml
@@ -93,8 +93,9 @@ jobs:
           gh release create v$VERSION_NAME --generate-notes
 
       - name: Get commit logs and add to the release note
+        if: github.event.inputs.tag_and_release_note == 'true'
         run: |
-          COMMIT_LOGS=$(git log v$PREV_VERSION_NAME..HEAD --pretty=format:"* %s")
+          echo "COMMIT_LOGS=$(git log v$PREV_VERSION_NAME..HEAD --pretty=format:'* %s')" >> $GITHUB_ENV
           gh release view v$VERSION_NAME --json body --jq .body > release_note.md
           echo '### Commit Logs\n$COMMIT_LOGS' >> release_note.md
           gh release edit v$VERSION_NAME --notes-file release_note.md
