--- a/.github/workflows/build_all.yml
+++ b/.github/workflows/build_all.yml
@@ -95,9 +95,9 @@ jobs:
       - name: Get commit logs and add to the release note
         if: github.event.inputs.tag_and_release_note == 'true'
         run: |
-          COMMIT_LOGS=$(git log v$PREV_VERSION_NAME..HEAD --pretty=format:'* %s')
           gh release view v$VERSION_NAME --json body --jq .body > release_note.md
-          echo '### Commit Logs\n$COMMIT_LOGS' >> release_note.md
+          echo '### Commit Logs\n' >> release_note.md
+          git log v$PREV_VERSION_NAME..HEAD --pretty=format:'* %s' >> release_note.md
           gh release edit v$VERSION_NAME --notes-file release_note.md
 
       - name: Check and save commit ID
