--- a/.github/workflows/build_all.yml
+++ b/.github/workflows/build_all.yml
@@ -98,7 +98,7 @@ jobs:
         if: github.event.inputs.tag_and_release_note == 'true'
         run: |
           echo "## What's Changed" > release_note.md
-          git log v$PREV_VERSION_NAME..HEAD --reverse --pretty=format:'* %s' > release_note.md
+          git log v$PREV_VERSION_NAME..HEAD --reverse --pretty=format:'* %s' >> release_note.md
           gh release view v$VERSION_NAME --json body --jq .body >> release_note.md
           gh release edit v$VERSION_NAME --notes-file release_note.md
 
