--- a/android/build.gradle
+++ b/android/build.gradle
@@ -9,8 +9,22 @@ rootProject.buildDir = '../build'
 subprojects {
     project.buildDir = "${rootProject.buildDir}/${project.name}"
 }
+// 元のコード
+//subprojects {
+//    project.evaluationDependsOn(':app')
+//}
+
+// Gradleのバージョンを7.xから8.xに上げた時に起こったエラーを解消するためのコード
 subprojects {
-    project.evaluationDependsOn(':app')
+    afterEvaluate { project ->
+        if (project.hasProperty('android')) {
+            project.android {
+                if (namespace == null) {
+                    namespace project.group
+                }
+            }
+        }
+    }
 }
 
 tasks.register("clean", Delete) {
