--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -32,6 +32,8 @@ android {
     compileSdkVersion flutter.compileSdkVersion
     ndkVersion flutter.ndkVersion
 
+    namespace "jp.twa.tokobus"
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
