--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="jp.twa.tokobus">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<!--    package="jp.twa.tokobus">-->
    <application
         android:label="TokoBus"
         android:name="${applicationName}"
