--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -30,8 +30,7 @@ if (flutterVersionName == null) {
 
 android {
     compileSdkVersion flutter.compileSdkVersion
-//  ndkVersion flutter.ndkVersion
-    ndkVersion "27.0.12077973"
+    ndkVersion flutter.ndkVersion
 
     namespace "jp.twa.tokobus"
 
