--- a/.github/workflows/build_web.yml
+++ b/.github/workflows/build_web.yml
@@ -1,8 +1,10 @@
 name: Build Web
 
 on:
-# push:
-#   branches: [ master ]
+  push:
+   branches:
+#    - master
+    - web-source
   workflow_dispatch:
   workflow_call:
     inputs:
