Revert "on pushにweb-sourceを追加"
This reverts commit fa92a1889a97ffd6afff9fd89672f2a998a46de6.

--- a/.github/workflows/build_web.yml
+++ b/.github/workflows/build_web.yml
@@ -1,10 +1,8 @@
 name: Build Web
 
 on:
-  push:
-   branches:
-#    - master
-    - web-source
+# push:
+#   branches: [ master ]
   workflow_dispatch:
   workflow_call:
     inputs:
