--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   shared_preferences: ^2.5.2
   settings_ui: ^2.0.2
   provider: ^6.1.2
+  introduction_screen: ^3.1.14
 
 dev_dependencies:
   flutter_test:
