--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,12 +14,12 @@ dependencies:
   intl: ^0.20.2
   flex_color_scheme: ^8.1.0
   nholiday_jp: ^1.0.2
-  page_view_indicators: ^2.0.0
   url_launcher: ^6.3.1
   http: ^1.3.0
   shared_preferences: ^2.5.2
   settings_ui: ^2.0.2
   provider: ^6.1.2
+  dots_indicator: ^2.1.2
   introduction_screen: ^3.1.14
 
 dev_dependencies:
