--- a/.github/workflows/build_web.yml
+++ b/.github/workflows/build_web.yml
@@ -50,7 +50,7 @@ jobs:
         run: |
           flutter --version
           flutter pub get
-          flutter build web --web-renderer html --base-href /$(echo ${{ github.repository }} | sed -e "s#.*/##")/app/
+          flutter build web --base-href /$(echo ${{ github.repository }} | sed -e "s#.*/##")/app/
           cp -r ./build/web/. ./worktree-gh-pages/app
 
       - name: Deploy
