--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,10 +2,10 @@ name: TokoBus
 description: 早稲田大学所沢キャンパスのスクールバス時刻表アプリです。
 publish_to: 'none'
 
-version: 2.8.16+130
+version: 2.8.15+129
 
 environment:
-  sdk: ^3.5.3
+  sdk: ^3.7.0
 
 dependencies:
   flutter:
@@ -26,6 +26,7 @@ dependencies:
     git:
       url: https://github.com/Pyozer/introduction_screen.git
       ref: 2d05d7f859442a1adff9edb00428f6cfe53fd71e
+  package_info_plus: ^8.2.1
 
 dev_dependencies:
   flutter_test:
