--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ publish_to: 'none'
 version: 2.9.0+131
 
 environment:
-  sdk: ^3.7.0
+  sdk: ^3.6.0  # ここに^3.7.0以降を書くとフォーマッターの挙動が変わる
 
 dependencies:
   flutter:
