--- a/.github/workflows/build_ios.yml
+++ b/.github/workflows/build_ios.yml
@@ -27,6 +27,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Setup latest stable Xcode
+        uses: maxim-lobanov/setup-xcode@v1
+        with:
+          xcode-version: latest-stable
+
       - name: Wait for push to complete
         run: |
           echo "Input: ${{ inputs.COMMIT_ID }}"
