ci(workflows): macos-26に変更

--- a/.github/workflows/build_ios.yml
+++ b/.github/workflows/build_ios.yml
@@ -22,7 +22,7 @@ permissions:
 
 jobs:
   build_ios:
-    runs-on: macos-latest
+    runs-on: macos-26
     steps:
       - name: Checkout
         uses: actions/checkout@v5
