--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,7 +4,19 @@ updates:
     directory: '/'
     schedule:
       interval: 'daily'
+      time: '09:00'
+      timezone: 'Asia/Tokyo'
+
+  - package-ecosystem: 'gradle'
+    directory: '/android'
+    schedule:
+      interval: 'daily'
+      time: '09:00'
+      timezone: 'Asia/Tokyo'
+
   - package-ecosystem: 'github-actions'
     directory: '/'
     schedule:
       interval: 'daily'
+      time: '09:00'
+      timezone: 'Asia/Tokyo'
